# template-web-project

./: Makefile  README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  database_manager.py  docker-compose.yaml  logging_config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .md
backend/app/: __init__.py  main.py
backend/app/api/dependencies/: db.py
backend/app/api/docs/: __init__.py
backend/app/api/endpoints/: __init__.py  user.py
backend/app/api/middlewares/: error.py
backend/app/api/security/: __init__.py
backend/app/core/: __init__.py  errors.py  settings.py
backend/app/core/constants/: messages.py
backend/app/core/constants/enums/: __init__.py  user.py
backend/app/core/generate/: ids.py
backend/app/core/security/: password.py
backend/app/db/: __init__.py  models.py
backend/app/db/configs/: base.py  connection.py
backend/app/db/repositories/: user.py
backend/app/logs/: __init__.py
backend/app/schemas/: __init__.py  message.py  user.py
backend/app/schemas/settings/: base.py  fields.py  validators.py
backend/app/services/: user.py
backend/app/utils/: docs.py  format.py
backend/docker/: Dockerfile-poetry  pyproject.toml
backend/docs/: README.txt
backend/tests/: README.txt  conftest.py
backend/tests/integration/repositories/user/: test_user_repository_add.py  test_user_repository_delete.py  test_user_repository_get.py  test_user_repository_update.py
backend/tests/integration/services/user/: test_user_service_add.py  test_user_service_delete.py  test_user_service_get_all.py  test_user_service_get_by_id.py  test_user_service_update.py
backend/tests/unitest/models/: test_user_model.py
backend/tests/unitest/schemas/user/: test_user_request.py
database/: Dockerfile  Makefile  README.md
database/backups/: README.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/products/: page.tsx  styles.module.css
frontend/src/components/Button/: index.tsx
server/: Dockerfile  nginx.conf
